# psychopy-setup

./: README.md  create-psychopy-shortcut.ps1  install-poetry-system-wide.ps1  install-pyenv-system-wide.ps1  run-psychopy.ps1  setup-psychopy-project.ps1
psychopy_project/: pyproject.toml
